--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skylark-data-color",
+  "name": "skylark-graphics-color",
   "version": "0.9.0",
   "description": "The skylark color utility library.",
   "main": "-",
@@ -10,7 +10,7 @@
   "homepage": "www.skylarkjs.org",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/skylarkjs/skylark-data-color.git"
+    "url": "git+https://github.com/skylark-graphics/skylark-graphics-color.git"
   },
   "keywords": [
     "skylark",
@@ -23,8 +23,10 @@
   "author": "Hudaokeji Co.,Ltd",
   "license": "MIT",
   "bugs": "https://github.com/skylarkjs/skylark/issues",
-  "devDependencies": {
-    "skylark-langx": "https://github.com/skylark-langx/skylark-langx#master"
+  "dependencies": {
+    "skylark-langx-types": "https://github.com/skylark-langx/skylark-langx-types#master",
+    "skylark-langx-klass": "https://github.com/skylark-langx/skylark-langx-klass#master",
+    "skylark-langx-ns": "https://github.com/skylark-langx/skylark-langx-ns#master"
   },
   "engines": {
     "node": ">=0.8.0"
