--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The skylark color utility library.",
   "main": "-",
   "scripts": {
-    "build": "sbundle build .",
+    "build": "slib build .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "homepage": "www.skylarkjs.org",
