--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "license": "MIT",
   "bugs": "https://github.com/skylarkjs/skylark/issues",
   "dependencies": {
-    "skylark-langx-klass": "git+https://github.com/skylark-langx/skylark-langx-klass.git#master",
-    "skylark-langx-ns": "git+https://github.com/skylark-langx/skylark-langx-ns.git#master",
-    "skylark-langx-strings": "git+https://github.com/skylark-langx/skylark-langx-strings.git#master",
-    "skylark-langx-types": "git+https://github.com/skylark-langx/skylark-langx-types.git#master"
+    "skylark-langx-klass": "git+https://github.com/skylark-langx/skylark-langx-klass.git",
+    "skylark-langx-ns": "git+https://github.com/skylark-langx/skylark-langx-ns.git",
+    "skylark-langx-strings": "git+https://github.com/skylark-langx/skylark-langx-strings.git",
+    "skylark-langx-types": "git+https://github.com/skylark-langx/skylark-langx-types.git"
   },
   "engines": {
     "node": ">=0.8.0"
